K8S/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker
  namespace: arun
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: myapp
    spec:
      serviceAccountName: myapp-serviceaccount  # Use the created ServiceAccount
      containers:
      - name: dockerdep-10-app
        image: arunbachi/b1:1
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
          limits:
            cpu: 200m
            memory: 300Mi
        ports:
        - containerPort: 5000
