K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker
  namespace: arun
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
